<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_contact">添加至联系人</string>
    <string name="add_pic_fail">无法添加图片</string>
    <string name="app_name">便签</string>
    <string name="cancel">取消</string>
    <string name="upload">上传本地记录到云端</string>
    <string name="download">下载云端记录到本地</string>
    <string name="login">登录账号</string>
    <string name="logout">注销账号</string>
    <string name="lockon">设置手势密码</string>
    <string name="lockoff">取消手势密码</string>
    <string name="username">账户：</string>
    <string name="password">密码：</string>
    <string name="logintext">登录</string>
    <string name="abouttext">关于</string>
    <string name="version">V 1.0.0</string>
    <string name="design">Design by Huangfei @2017</string>
    <string name="usericotext">未登录，请登录后再试！！！</string>
    <string name="newuser">新用户？注册账号</string>
    <string name="registtext">注册</string>
    <string name="changeuserinfo">信息修改</string>
    <string name="camer">拍照</string>
    <string name="gallery">图库</string>
    <string name="email">Email</string>
    <string name="nouser">未登录</string>
    <string name="registemail">请输入注册邮箱：</string>
    <string name="registusername">请输入昵称：</string>
    <string name="registpassword1">请输入登录密码：</string>
    <string name="registpassword2">请确认密码：</string>
    <string name="changetext">修改</string>
    <string name="changeusername">新用户名：</string>
    <string name="rawpassword">原密码：</string>
    <string name="newpassword1">新密码：</string>
    <string name="newpassword2">确认新密码：</string>
    <string name="toastemail">未输入邮箱，请输入后重试！！！</string>
    <string name="toasteusername">未输入昵称，请输入后重试！！！</string>
    <string name="toastpassword1">未输入密码，请输入后重试！！！</string>
    <string name="toastpassword2">输入密码不一致，请确认后重试！！！</string>
    <string name="toastchangepassword1">未输入新密码，请输入后重试！！！</string>
    <string name="toastchangepassword2">两次新密码输入不一致，请确认后重试！！！</string>
    <string name="toastemailpasswordnotnull">邮箱和密码不能为空，请输入后重试！！！</string>
    <string name="toastupload">%1$d条数据同步失败，请重新同步！！！</string>
    <string name="toastuploaderror">同步失败，请稍后重试！！！</string>
    <string name="toastchangeerror">修改失败，请检查密码是否正确！！！</string>
    <string name="error101">邮箱或密码出错，请确认后重试！！！</string>
    <string name="error9016">网络暂不可用，请联网后重试！！！</string>
    <string name="error301">邮箱地址不正确，请输入正确邮箱！！！</string>
    <string name="error202">该用户名已被注册，请用其他用户名注册！！！</string>
    <string name="error203">该邮箱已被注册，请用其他邮箱注册！！！</string>
    <string name="registerror">注册出错，请稍后重试！！！</string>
    <string name="loginerror">登录出错，请稍后重试！！！</string>
    <string name="toastback">再按一次退出键，退出便签。</string>
    <string name="avatar_editor_success">头像更新成功</string>
    <string name="avatar_editor_failure">头像更新失败</string>
    <string name="passwords">Password</string>
    <string name="about">关于此应用</string>
    <string name="choose_item">选择项目</string>
    <string name="confirm_delete_file">确定要删除这个便签吗?</string>
    <string name="confirm_delete_items">确定要删除这%1$d个便签吗?</string>
    <string name="copy">复制</string>
    <string name="copy2clipboard">已复制到剪贴板</string>
    <string name="day_afternoon">下午</string>
    <string name="day_dawn">凌晨</string>
    <string name="day_evening">晚上</string>
    <string name="day_midnoon">中午</string>
    <string name="day_morning">上午</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="deleting">正在删除</string>
    <string name="deselect">取消全选</string>
    <string name="edit">编辑</string>
    <string name="edit_note">编辑便签</string>
    <string name="finish">完成</string>
    <string name="item">项</string>
    <string name="items">项</string>
    <string name="loading">正在加载</string>
    <string name="make_calls">拨打电话</string>
    <string name="new_note">新建便签</string>
    <string name="no_content_toast">没有需要分享的内容</string>
    <string name="no_data">无便签</string>
    <string name="no_results">无搜索结果</string>
    <string name="no_title">无标题</string>
    <string name="not_found_mail_app">没有发现邮箱应用</string>
    <string name="not_found_sms_app">没有发现短信应用</string>
    <string name="not_support_timeline">该版本微信不支持发送到朋友圈</string>
    <string name="note_too_long">文字过长，无法保存</string>
    <string name="notes">便签</string>
    <string name="open">打开</string>
    <string name="pic_note">图片便签</string>
    <string name="pls_open_permission">请开启读写权限</string>
    <string name="save_failed">保存失败</string>
    <string name="save_share_photo">保存图片</string>
    <string name="save_success">成功保存至</string>
    <string name="saving_photo">正在保存</string>
    <string name="search">搜索</string>
    <string name="select_all">全选</string>
    <string name="selected">已选择</string>
    <string name="send_email">发送邮件</string>
    <string name="send_message">发送短信</string>
    <string name="share_by_email">发送邮件</string>
    <string name="share_by_email_chooser">请选择邮箱发送</string>
    <string name="share_by_photo">以图片形式分享</string>
    <string name="share_by_text">以文字形式分享</string>
    <string name="share_dialog_title">分享</string>
    <string name="share_failed">分享失败</string>
    <string name="share_photo_title">分享便签</string>
    <string name="share_slogan">来自FLY便签</string>
    <string name="share_to_friends">发布文字至朋友圈</string>
    <string name="task_is_running_toast">请当前任务结束后再进行操作</string>
    <string name="too_long_content">便签内容过长，无法以图片形式分享</string>
    <string name="too_long_text">字数超过2000字后无法分享</string>
    <string name="weibosdk_not_support_api_hint">无法分享，可能因为微博客户端：1.未安装；2.不支持SDK分享；3.非官方版本</string>
</resources>
