<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_item_click"
        android:text="@string/camer"
        android:textColor="@color/tv_main_activity_edit_text_color"
        android:textSize="@dimen/tv_title_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0px"
        android:background="@color/view_bottom_delete_bg" />

    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_item_click"
        android:text="@string/gallery"
        android:textColor="@color/tv_main_activity_edit_text_color"
        android:textSize="@dimen/tv_title_text_size" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0px"
        android:background="@color/view_bottom_delete_bg" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_item_click"
        android:text="@string/cancel"
        android:textColor="@color/tv_main_activity_edit_text_color"
        android:textSize="@dimen/tv_title_text_size" />

</LinearLayout>