<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_mode_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/rl_title_height"
    android:background="@color/title_bg">

    <TextView
        android:id="@+id/title_tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:clickable="true"
        android:gravity="start|center"
        android:paddingLeft="@dimen/title_tv_cancel_margin_left"
        android:paddingRight="@dimen/title_tv_cancel_margin_left"
        android:text="@string/cancel"
        android:textColor="@color/title_tv_cancel_text_color"
        android:textSize="@dimen/title_tv_cancel_text_size" />

    <TextView
        android:id="@+id/title_edit_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/selected"
        android:textColor="@color/title_text_black_color"
        android:textSize="@dimen/tv_title_text_size" />

    <TextView
        android:id="@+id/title_edit_mode_select_all"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="end"
        android:gravity="end|center"
        android:paddingLeft="@dimen/title_tv_cancel_margin_left"
        android:paddingRight="@dimen/title_tv_cancel_margin_left"
        android:text="@string/select_all"
        android:textColor="@color/title_tv_cancel_text_color"
        android:textSize="@dimen/title_tv_cancel_text_size"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>