<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_bg"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rl_title_height"
        android:background="@color/title_bg">

        <ImageView
            android:id="@+id/ima_about_back"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/iv_edit_activity_title_back_arrow_margin_start"
            android:clickable="true"
            android:gravity="start|center"
            android:paddingRight="@dimen/title_tv_cancel_margin_left"
            android:src="@drawable/title_icon_back" />

        <TextView
            android:id="@+id/tv_title_edit"
            android:layout_width="@dimen/tv_title_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/tv_title_margin_end"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/abouttext"
            android:textColor="@color/title_text_black_color"
            android:textSize="@dimen/tv_title_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1.8"
        android:background="@color/item_bg">

        <ImageView
            android:layout_width="100.0dp"
            android:layout_height="100.0dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/tv_bottom_delete_text_color"
            android:textSize="15.0sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/tv_bottom_delete_text_color"
            android:textSize="10.0sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50.0dp"
            android:gravity="center"
            android:text="@string/design"
            android:textColor="@color/tv_bottom_delete_text_color"
            android:textSize="10.0sp" />
    </LinearLayout>


</LinearLayout>