<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_bg"
    android:orientation="vertical"
    android:paddingEnd="8.0dp"
    android:paddingStart="8.0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="2">

        <com.zui.notes.widget.MultiShapeView
            android:id="@+id/login_ico"
            android:layout_width="100.0dp"
            android:layout_height="100.0dp"
            android:layout_centerInParent="true"
            app:border_color="#ffccdd"
            app:border_width="1.5dp"
            app:shape="circle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70.0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/item_tv_summary_text_color"
                android:textSize="25.0sp" />

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="@color/item_tv_summary_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70.0dp"
            android:layout_marginTop="5.0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@color/item_tv_summary_text_color"
                android:textSize="25.0sp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="@color/item_tv_summary_text_color" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dp"
            android:background="@drawable/btn_login"
            android:text="@string/logintext"
            android:textColor="@color/item_tv_delete_text_color"
            android:textSize="20.0sp" />

        <Button
            android:id="@+id/btn_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newuser"
            android:textColor="@drawable/btn_regist"
            android:textSize="12.0sp"
            android:layout_gravity="right"
            android:background="@null"
            android:layout_marginTop="5.0dp"/>
    </LinearLayout>

</LinearLayout>