<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/share_photo_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/rl_title_height"
        android:background="@color/title_bg">

        <TextView
            android:id="@+id/exit_share_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:paddingLeft="@dimen/title_tv_cancel_margin_left"
            android:text="@string/cancel"
            android:textColor="@drawable/share_photo_action_btn"
            android:textSize="@dimen/title_tv_cancel_text_size" />

        <View
            android:id="@+id/cancel_btn_layout"
            android:layout_width="50.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/share_photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/share_photo_title"
            android:textColor="@color/title_text_black_color"
            android:textSize="@dimen/tv_title_text_size" />

        <View
            android:id="@+id/save_btn_layout"
            android:layout_width="80.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/share_photo_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/title_tv_cancel_margin_left"
            android:text="@string/save_share_photo"
            android:textColor="@drawable/share_photo_action_btn"
            android:textSize="@dimen/title_tv_cancel_text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2.0px"
            android:layout_alignParentBottom="true"
            android:background="@color/title_line_color" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/share_content_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30.0dip"
            android:paddingEnd="16.0dip"
            android:paddingStart="16.0dip"
            android:paddingTop="16.0dip" />
    </ScrollView>

    <include
        android:id="@+id/share_photo_bottom_bar"
        layout="@layout/share_photo_bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="52.0dip" />
</LinearLayout>