<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300.0dp"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="2"
        android:background="@color/coloryellow">
        <com.zui.notes.widget.MultiShapeView
            android:id="@+id/user_ico"
            android:layout_width="100.0dp"
            android:layout_height="100.0dp"
            app:border_color="#ffccdd"
            app:border_width="1.5dp"
            app:shape="circle"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_weight="3"
        android:background="@color/title_bg"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_upload"
            android:layout_width="match_parent"
            android:layout_height="62.0dp"
            android:orientation="horizontal"
            android:layout_marginTop="20.0dp">

            <ImageView
                android:layout_width="80.0dp"
                android:layout_height="50.0dp"
                android:src="@drawable/upload"
                android:layout_gravity="center"
                />

            <Button
                android:text="@string/upload"
                android:gravity="center_vertical|start"
                android:textSize="15.0sp"
                android:textColor="@color/item_tv_title_text_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_download"
            android:layout_width="match_parent"
            android:layout_height="62.0dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80.0dp"
                android:layout_height="40.0dp"
                android:src="@drawable/download"
                android:layout_gravity="center" />

            <Button
                android:text="@string/download"
                android:gravity="center_vertical|start"
                android:textSize="15.0sp"
                android:textColor="@color/item_tv_title_text_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lock"
            android:layout_width="match_parent"
            android:layout_height="62.0dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80.0dp"
                android:layout_height="40.0dp"
                android:src="@drawable/lock"
                android:layout_gravity="center" />
            <Button
                android:text="@string/lock"
                android:gravity="center_vertical|start"
                android:textSize="15.0sp"
                android:textColor="@color/item_tv_title_text_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_about"
            android:layout_width="match_parent"
            android:layout_height="62.0dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80.0dp"
                android:layout_height="40.0dp"
                android:src="@drawable/about"
                android:layout_gravity="center" />
            <Button
                android:text="@string/about"
                android:gravity="center_vertical|start"
                android:textSize="15.0sp"
                android:textColor="@color/item_tv_title_text_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_login_logout"
        android:layout_width="match_parent"
        android:layout_height="62.0dp"
        android:layout_gravity="bottom"
        android:background="@color/title_bg"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80.0dp"
            android:layout_height="40.0dp"
            android:src="@drawable/login"
            android:layout_gravity="center" />
        <Button
            android:text="@string/login"
            android:gravity="center_vertical|start"
            android:textSize="15.0sp"
            android:textColor="@color/item_tv_title_text_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"/>
    </LinearLayout>

</LinearLayout>